# monorepo

./: .clang-format  .cproject  .cproject_org  .env  .fans.c.swp  .gitignore  .gitmodules  .main.c.swp  .ninja_log  .pre-commit-config.yaml  .project  .project_org  .pumps.c.swp  .travis.yml  ADS7038.c  ADS7038.h  BMB_task.c  BMB_task.h  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  Makefile  PCF8574.c  PCF8574.h  README.md  Release_STM32F413RG_FLASH.ld  STM32F413RG_FLASH.ld  TCA9554.c  TCA9554.h  adc.c  adc.h  bad_format.c  bms_error.c  bms_error.h  bms_relay.c  bq_interface.c  bq_interface.h  build.ninja  build.sh  can.c  (+74 more)
BOOT/: CMakeLists.txt  CMakePresets.json
BOOT/Flash/: stm32f413rgtx_FLASH.ld
BOOT/Inc/: FreeRTOSConfig.h  blt_conf.h  can.h  clock.h  flash_layout.c  gpio.h  rs232.h  setup.h  stm32f4xx_hal_conf.h  stm32h7xx_hal_conf.h
BOOT/Src/: hooks.c  main.c  setup.c
BOOT/Src/stm32f4xx/: can.c  clock.c  gpio.c  rs232.c
BOOT/Src/stm32h7xx/: can.c  clock.c  gpio.c
CMR/: CMakeLists.txt  README.md  adc.c  adc.h  blt_conf.h  bootloader.c  bootloader.h  bsrr.c  bsrr.h  can.c  can.h  can_BACKUP_81650.c  can_BASE_81650.c  can_ids.h  can_types.h  config.c  config.h  config_screen_helper.c  config_screen_helper.h  dma.c  dma.h  dsp.c  dsp.h  f413.c  f413.h  fir_filter.c  fir_filter.h  gpio.c  gpio.h  i2c.c  i2c.h  interrupts.c  l431.c  l431.h  panic.c  panic.h  platform.h  pwm.c  pwm.h  qspi.c  (+13 more)
CMR/include/: qspi.h
CMR/include/CMR/: adc.h  can_ids.h  can_types.h  config_screen_helper.h  dsp.h  sensors.h
CMR/src/: adc.c  can.c  config.c  config_screen_helper.c  dma.c  dsp.c  f413.c  fir_filter.c  gpio.c  i2c.c  interrupts.c  l431.c  panic.c  pwm.c  qspi.c  rcc.c  sensors.c  spi.c  tasks.c  uart.c  watchdog.c
HAL/: CMakeLists.txt  README.md
HAL/F413/Inc/: stm32f4xx_hal_can.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_tim.h
HAL/F413/Src/: stm32f4xx_hal.c  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_cryp.c  stm32f4xx_hal_dac.c  stm32f4xx_hal_dcmi_ex.c  stm32f4xx_hal_dma2d.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_fmpi2c_ex.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hash_ex.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_lptim.c  stm32f4xx_hal_ltdc_ex.c  stm32f4xx_hal_nand.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_pcd_ex.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_rng.c  stm32f4xx_hal_rtc_ex.c  stm32f4xx_hal_sai.c  stm32f4xx_hal_sd.c  stm32f4xx_hal_spdifrx.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_sram.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_usart.c  stm32f4xx_ll_crc.c  stm32f4xx_ll_dma.c  stm32f4xx_ll_dma2d.c  stm32f4xx_ll_exti.c  (+10 more)
HAL/F4XX/Src/: stm32f4xx_hal_can.c  stm32f4xx_hal_cec.c  stm32f4xx_hal_crc.c  stm32f4xx_hal_cryp_ex.c  stm32f4xx_hal_dac_ex.c  stm32f4xx_hal_dcmi.c  stm32f4xx_hal_dfsdm.c  stm32f4xx_hal_eth.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_i2s.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_nor.c  stm32f4xx_hal_pccard.c  stm32f4xx_hal_qspi.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_rtc.c  stm32f4xx_hal_sdram.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_ll_adc.c  stm32f4xx_ll_dac.c  stm32f4xx_ll_fmc.c  stm32f4xx_ll_sdmmc.c
HAL/Inc/: stm32f4xx_hal_conf_template.h
HAL/L431/Src/: stm32l4xx_hal.c  stm32l4xx_hal_dma_ex.c  stm32l4xx_hal_exti.c  stm32l4xx_hal_flash.c  stm32l4xx_hal_flash_ramfunc.c  stm32l4xx_hal_i2c.c  stm32l4xx_hal_pwr.c  stm32l4xx_hal_pwr_ex.c  stm32l4xx_hal_rcc.c  stm32l4xx_hal_tim.c  stm32l4xx_hal_tim_ex.c
HITL/DCM/: CMakeLists.txt
HITL/DCM/Inc/: can.h  i2c.h
HITL/DCM/Src/: can.c  gpio.c  i2c.c  main.c
HITL/HVC/: CMakeLists.txt  README.md
HITL/HVC/Inc/: can.h  gpio.h  i2c.h  pwm.h  (+1 more)
RAM/: .gitignore  .gitmodules  .project  CMakeLists.txt  build.sh  can_fmt.json  doxygen.conf  marshall.py  requirements.txt  simulatecar.py  stm32f413rgtx_FLASH.ld
RAM/Inc/: FreeRTOSConfig.h  can.h  config.h  gitcommit.h  gpio.h  memorator.h  rtc.h  statusLED.h  stm32f4xx_hal_conf.h  task_trigger.h  uart.h
RAM/Src/: can.c  config.c  gpio.c  main.c  memorator.c  parser.c  rtc.c  sample.c  statusLED.c  task_trigger.c  uart.c
RAM/tests/: CMakeLists.txt  test1.c
RAM/tmp/: RAM-mkdirs.cmake
VSM/: CMakeLists.txt
VSM/Inc/: FreeRTOSConfig.h  adc.h  assi.h  can.h  dac.h  error.h  gitcommit.h  gpio.h  pwm.h  sensors.h  state.h  statusLED.h  stm32f4xx_hal_conf.h  tssi.h
VSM/Src/: adc.c  assi.c  can.c  dac.c  error.c  gpio.c  main.c  pwm.c  sensors.c  state.c  statusLED.c  tssi.c
VSM/Startup/: startup_stm32f413rgtx.s
VSM/tmp/: VSM-cfgcmd.txt  VSM-mkdirs.cmake
stm32f413-drivers/: .gitignore  CMakeLists.txt  CMakeLists_HAL.txt  README.md
stm32f413-drivers/CMR/: CMakeLists.txt  generate.py
stm32f413-drivers/CMSIS/: system_stm32h7xx.c
stm32f413-drivers/DIM-ESE/: CMakeLists.txt  README.md  RTD-new.ese  RTD.ese  config.ese  errors.ese  ese_coproc.py  race.ese  startup-temp.ese  startup.ese  temp-ese.ese  temp.ese
stm32f413-drivers/FATFS/: CMakeLists.txt
stm32f413-drivers/FreeRTOS/: CMakeLists.txt  History.txt  sbom.spdx
stm32f413-drivers/HAL/: CMakeLists.txt
stm32f413-drivers/Movella/: 2025_4_29.xsa  25e_Movella_GeneralMag_RTK.xsa  movella.xsa
stm32f413-drivers/PCAN/: 26x.dbc  26x_new.dbc  CMR 19e.sym  CMR 20e DIM.sym  CMR 20e.sym  CMR 22e.sym  CMR 23e.sym  CMR 24e.dsk.v50  CMR 24e.sym  CMR 25e.dsk.v50  CMR 25e.peproj  CMR 25e.peproj.v50  CMR 25e.sym  CMR 26x.sym  CMR_20e_controls.sym  Oscillations.plt  Oscillations_amk.plt  Torques_On_Jack.plt  Trace1.csv  Trace2.csv  gen_config_symbol.py
stm32f413-drivers/filegen/: bitpacking.json  can_types_fixed.h  can_types_new.h  canid_mapper.py  canid_type_map.json  canids_post.h  canids_read.py  debugoutput.txt  enum_generator.py  extra_info.py  merge_can_signals.py  old_26x.sym  read.py  sym_gen.py  symv1.sym
tests/: CMakeLists.txt  hello_test.cc  test.sh  test1.c
(+2170 files in other folders)
